--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+*,*:after,*:before{padding: 0; margin: 0; border: 0; box-sizing: border-box;}
+a{text-decoration: none; color: var(--main-blue-color)}
+ul, ol, li{list-style: none;}
+img{vertical-align: top;}
+h1,h2,h3,h4,h5,h6{font-weight: inherit; font-size: inherit;}
+html, body{line-height: 1;font-size: 14px; background-color: #dfe1e6; font-family: 'Manrope', 'Roboto', "Roboto Light", sans-serif}
+.wrapper{padding: 30px;min-height: 100%}
+.title{font-size: 30px;font-weight: 700;color: #fff;margin: 0 0 30px 0;}
+
+.image-slider{padding: 30px 0 70px 0;}
+.image-slider__wrapper{}
+.image-slider__slide{}
+.image-slider__image{text-align: center;}
+.image-slider__image img{max-width: 100%; width: 70%}
+
+.block{display: flex;}
+.block__side{flex: 0 0 300px; background-color: #77608d}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +28,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.header_icons{
+
 }
