add slider and connecting with wordpress

--- a/src/components/regular_components/posts_component/main_post_component/MyMainPostComponent.module.css
+++ b/src/components/regular_components/posts_component/main_post_component/MyMainPostComponent.module.css
@@ -5,6 +5,7 @@
     grid-template-columns: 550px 740px;
     align-self: center;
     justify-content: space-between;
+    margin-top: 140px;
 }
 .main_page__top_banner__left_part{
     width: 80%;
@@ -65,14 +66,4 @@
     font-weight: 400;
     line-height: 150%;
     color: #003767;
-}
-.top_banner__link_button{
-    font-size: 16px;
-    font-weight: 600;
-    color: #ffffff;
-    line-height: 150%;
-    background-color: #ff4822;
-    box-shadow: 1px 1px 16px rgba(0, 0, 0, 0.25);
-    border-radius: 2px;
-    padding: 13px 37px;
 }
