--- a/src/components/main_components/header/header_sections/header_main/header_main_menu/MyHeaderMainMenu.module.css
+++ b/src/components/main_components/header/header_sections/header_main/header_main_menu/MyHeaderMainMenu.module.css
@@ -17,6 +17,10 @@
     font-weight: 500;
     margin-right: 30px;
 }
+.header_link{
+    display: flex;
+    align-items: center;
+}
 .catalog_icon{
     margin-right: 10px;
 }
