--- a/src/components/regular_components/catalog_component/MyCatalog.module.css
+++ b/src/components/regular_components/catalog_component/MyCatalog.module.css
@@ -10,3 +10,10 @@
     margin-right: 30px;
 }
 
+.loader_styles{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
