--- a/src/components/main_components/header/MyHeader.module.css
+++ b/src/components/main_components/header/MyHeader.module.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
 }
 .header_main_styles{
+    min-height: 180px;
     box-shadow: 0 4px 6px rgba(0,0,0,0.06);
     background-color: #ffffff;
 }
