--- a/src/components/ProductPage/ProductPage.module.css
+++ b/src/components/ProductPage/ProductPage.module.css
@@ -6,6 +6,12 @@
     padding-top: 50px;
     margin-bottom: 450px;
 }
+.product_cart_main{
+    width: 100%;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+}
 .description{
     font-weight: 400;
     font-size: 16px;
