remove problem with router

--- a/src/components/main_components/header/header_sections/header_main/header_main_menu/MyHeaderMainMenu.module.css
+++ b/src/components/main_components/header/header_sections/header_main/header_main_menu/MyHeaderMainMenu.module.css
@@ -23,6 +23,8 @@
 }
 .catalog_icon{
     margin-right: 10px;
+    display: flex;
+    align-items: center;
 }
 .no_active_menu_element{
     margin-right: 30px;
