--- a/src/components/ProductPage/ProductPage.module.css
+++ b/src/components/ProductPage/ProductPage.module.css
@@ -1,16 +1,24 @@
 .product_main__layout{
-    display: grid;
-    grid-template-columns: 0.25fr 0.75fr;
     width: 1290px;
     margin: 0 auto;
     padding-top: 50px;
     margin-bottom: 450px;
+    display: grid;
+    grid-template-columns: 0.25fr 0.75fr;
+}
+.productWrapper{
+    width: 100%;
+    display: flex;
 }
 .product_cart_main{
-    width: 100%;
+    width: 960px;
+    padding: 30px;
     background-color: #ffffff;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
     border-radius: 8px;
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    grid-column-gap: 50px;
 }
 .description{
     font-weight: 400;
