--- a/src/components/catalog_of_products/catalog_list/MyProductCatalog.module.css
+++ b/src/components/catalog_of_products/catalog_list/MyProductCatalog.module.css
@@ -1,7 +1,20 @@
 .catalog_main__section{
-    width: 960px;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-column-gap: 30px;
-    grid-row-gap: 16px;
+    grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+    grid-column-gap: 20px;
+    grid-row-gap: 30px;
+    margin-top: 16px;
+}
+/*query*/
+@media screen and (max-width: 1200px) {
+    .catalog_main__section{grid-column-gap: 15px; grid-row-gap: 20px; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));}
+}
+@media screen and (max-width: 992px) {
+    .catalog_main__section{grid-column-gap: 20px; grid-row-gap: 40px;}
+}
+@media screen and (max-width: 576px) {
+    .catalog_main__section{grid-column-gap: 10px; grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));}
+}
+@media screen and (max-width: 400px) {
+    .catalog_main__section{grid-column-gap: 10px; grid-template-columns: repeat(auto-fit, minmax(135px, 1fr));}
 }
