--- a/src/components/CatalogAside/CatalogAside.module.css
+++ b/src/components/CatalogAside/CatalogAside.module.css
@@ -1,7 +1,24 @@
+/*Main container styles*/
+.main_container{
+    background-color: #ffffff;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
+    border-radius: 2px;
+    max-width: 280px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+}
+.filterSection{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.categorySection{margin-top: 30px;}
 .list_link{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-top: 16px;
 }
 .link,
 .active_link{
@@ -15,18 +32,7 @@
 .link:last-child{
     margin-bottom: 0;
 }
-.main_container{
-    width: 303px;
-    height: 360px;
-    background-color: #ffffff;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
-    border-radius: 2px;
-    margin-right: 30px;
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
+
 .active_link{
     color: #ff4822;
     position: relative;
@@ -38,3 +44,7 @@
     top: 0;
     left: 0;
 }
+/*query*/
+@media only screen and (max-width: 1200px) {  .aside{width: 30%;}  }
+@media only screen and (max-width: 992px) {  .aside{width: 40%;}  }
+@media only screen and (max-width: 768px) {  .list_link{display: none;}  }
