--- a/src/components/UIUX/quantity/MyQuantity.module.css
+++ b/src/components/UIUX/quantity/MyQuantity.module.css
@@ -1,7 +1,7 @@
 .mainMyQuantityBlock{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     width: 124px;
     height: 36px;
 }
