--- a/src/components/catalog_of_products/MyCatalog.module.css
+++ b/src/components/catalog_of_products/MyCatalog.module.css
@@ -1,14 +1,16 @@
 .catalog_main__layout{
     display: grid;
-    grid-template-columns: 0.25fr 0.75fr;
     max-width: 1290px;
     margin: 0 auto;
-    padding-top: 50px;
-    margin-bottom: 450px;
+    padding: 50px 20px 0 20px;
 }
-
-.aside_catalog__block{
-    width: 300px;
-    margin-right: 30px;
+.catalogWrapper{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
 }
+.catalogMainContent{width: 930px;}
 
+/*query*/
+@media screen and (max-width: 1200px) { .catalog_main__layout{margin: 0;}  .catalogMainContent{width: 100%;}  }
+@media only screen and (max-width: 768px) {  .catalogWrapper{display: flex; flex-direction: column;}  }
