--- a/src/index.css
+++ b/src/index.css
@@ -20,13 +20,19 @@ html, body{line-height: 1;font-size: 14px; background-color: #dfe1e6; font-famil
 
 body {
   margin: 0;
-  min-height: 100vh;
   position: relative;
   font-family: -apple-system, BlinkMacSystemFont, 'Manrope', 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+.App{
+  position: relative;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 code {
