--- a/src/components/ProductPage/ProductPage.module.css
+++ b/src/components/ProductPage/ProductPage.module.css
@@ -2,46 +2,26 @@
     width: 1290px;
     margin: 0 auto;
     padding-top: 50px;
-    margin-bottom: 450px;
     display: grid;
     grid-template-columns: 0.25fr 0.75fr;
 }
-.productWrapper{
-    width: 100%;
-    display: flex;
-}
-.product_cart_main{
-    width: 960px;
-    padding: 30px;
+.productMainWrapper{
     background-color: #ffffff;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
     border-radius: 8px;
     display: grid;
     grid-template-columns: 300px 1fr;
     grid-column-gap: 50px;
+    padding: 30px;
 }
+.productWrapper{
+    width: 100%;
+    display: flex;
+}
+
 .description{
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     color: #003767;
 }
-
-/*rating and compare buttons*/
-.ratingCompareBlock{
-    margin: 20px 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.compareButtonsBlock{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.actionButton{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
