--- a/src/components/ProductCatalog/CatalogItemsLoop/CatalogSingleProduct/CatalogSingleProduct.module.css
+++ b/src/components/ProductCatalog/CatalogItemsLoop/CatalogSingleProduct/CatalogSingleProduct.module.css
@@ -62,67 +62,67 @@
     justify-content: space-between;
 }
 /*information block price block*/
-.product_cart__price_block{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
+/*.product_cart__price_block{*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: space-between;*/
+/*}*/
 /*information block regular price*/
-.product_cart__regular_price{
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 150%;
-    color: #000000;
-}
+/*.product_cart__regular_price{*/
+/*    font-weight: 500;*/
+/*    font-size: 18px;*/
+/*    line-height: 150%;*/
+/*    color: #000000;*/
+/*}*/
 /*information block sale price*/
-.product_cart__sale_price{
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 150%;
-    color: #ff4822;
-}
-.sale_styles{
-    text-decoration: line-through;
-    margin-right: 10px;
-    font-size: 16px;
-}
+/*.product_cart__sale_price{*/
+/*    font-weight: 700;*/
+/*    font-size: 20px;*/
+/*    line-height: 150%;*/
+/*    color: #ff4822;*/
+/*}*/
+/*.sale_styles{*/
+/*    text-decoration: line-through;*/
+/*    margin-right: 10px;*/
+/*    font-size: 16px;*/
+/*}*/
 
-/*product cart sale label*/
-.product_cart__sale_label{
-    width: 73px;
-    height: 44px;
-    position: absolute;
-    top: 30px;
-    left: 0;
-    padding: 4px 8px;
-    background: #ff4822;
-    box-shadow: 2px 2px 2px rgba(0,0,0,0.25);
-    border-radius: 0 2px 2px 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    font-weight: 600;
-    line-height: 150%;
-    color: #ffffff;
-}
-.product_cart__action_buttons{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 55px;
-    position: absolute;
-    top: 12px;
-    right: 12px;
-}
+/*!*product cart sale label*!*/
+/*.product_cart__sale_label{*/
+/*    width: 73px;*/
+/*    height: 44px;*/
+/*    position: absolute;*/
+/*    top: 30px;*/
+/*    left: 0;*/
+/*    padding: 4px 8px;*/
+/*    background: #ff4822;*/
+/*    box-shadow: 2px 2px 2px rgba(0,0,0,0.25);*/
+/*    border-radius: 0 2px 2px 0;*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    font-size: 24px;*/
+/*    font-weight: 600;*/
+/*    line-height: 150%;*/
+/*    color: #ffffff;*/
+/*}*/
+/*.product_cart__action_buttons{*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    justify-content: space-between;*/
+/*    width: 55px;*/
+/*    position: absolute;*/
+/*    top: 12px;*/
+/*    right: 12px;*/
+/*}*/
 /*query*/
 @media screen and (max-width: 1200px) {
-    .product_cart__price_cart{
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(99px, 101px));
-        justify-content: space-between;
-        grid-row-gap: 10px;
-    }
+    /*.product_cart__price_cart{*/
+    /*    display: grid;*/
+    /*    grid-template-columns: repeat(auto-fit, minmax(99px, 101px));*/
+    /*    justify-content: space-between;*/
+    /*    grid-row-gap: 10px;*/
+    /*}*/
     .product_cart__img_block{height: 225px;}
     .product_cart__title_element{font-size: 16px;}
     .product_cart__sku_block{font-size: 14px;}
