--- a/src/components/ProductCatalog/CatalogItemsLoop/Pagination/Pagination.module.css
+++ b/src/components/ProductCatalog/CatalogItemsLoop/Pagination/Pagination.module.css
@@ -1,11 +1,11 @@
-.pagination_main_styles{
+.paginationMainStyles{
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
     grid-column: 2;
 }
-.active_page{
+.activePage{
     font-size: 16px;
     font-weight: 400;
     line-height: 150%;
@@ -16,7 +16,7 @@
     background-color: #ff4822;
     border-radius: 2px;
 }
-.single_page{
+.singlePage{
     color: #003767;
     font-size: 16px;
 }
