--- a/src/components/ProductPage/ProductPage.module.css
+++ b/src/components/ProductPage/ProductPage.module.css
@@ -25,3 +25,13 @@
     line-height: 150%;
     color: #003767;
 }
+
+
+/*description block*/
+.productTabsBlock{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 30px;
+}
