--- a/src/components/UIUX/body/MyRegularText.module.css
+++ b/src/components/UIUX/body/MyRegularText.module.css
@@ -1,6 +1,8 @@
 .bodyStyles{
+    display: block;
     font-weight: 400;
     font-size: 16px;
     line-height: 150%;
     color: #003767;
+    cursor: pointer;
 }
