--- a/src/components/ProductPage/ProductPage.module.css
+++ b/src/components/ProductPage/ProductPage.module.css
@@ -1,9 +1,11 @@
 .product_main__layout{
     width: 1290px;
     margin: 0 auto;
+}
+.productWrapper{
     padding-top: 50px;
     display: grid;
-    grid-template-columns: 0.25fr 0.75fr;
+    grid-template-columns: 1fr 3fr;
 }
 .productMainWrapper{
     background-color: #ffffff;
@@ -13,10 +15,6 @@
     grid-template-columns: 300px 1fr;
     grid-column-gap: 50px;
     padding: 30px;
-}
-.productWrapper{
-    width: 100%;
-    display: flex;
 }
 
 .description{
@@ -29,9 +27,23 @@
 
 /*description block*/
 .productTabsBlock{
+    margin-top: 54px;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: flex-start;
     gap: 30px;
+}
+.contentTabs{
+    margin-top: 30px;
+}
+
+.descriptionHeight{
+    max-height: 220px;
+    overflow: hidden;
+}
+.readMore{
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
 }
