--- a/src/components/UIUX/buttons/MyNormalRegularBtn/MyNormalRegularBtn.module.css
+++ b/src/components/UIUX/buttons/MyNormalRegularBtn/MyNormalRegularBtn.module.css
@@ -3,7 +3,7 @@
     border: 1px solid #003767;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
     border-radius: 2px;
-    padding: 10px;
+    padding: 10px 40px;
     text-align: center;
     font-weight: 400;
     font-size: 16px;
