--- a/src/components/ProductCatalog/CatalogItemsLoop/CatalogLoopLoaderItem/CatalogLoopLoaderItem.module.css
+++ b/src/components/ProductCatalog/CatalogItemsLoop/CatalogLoopLoaderItem/CatalogLoopLoaderItem.module.css
@@ -1,18 +1,39 @@
 .productLoaderItem{
     max-width: 300px;
     height: 440px;
-    background-color: #ffffff;
+    background-color: #f2f3f4;
     box-shadow: 0 4px 6px rgba(0,0,0,0.06);
     border-right: 2px;
-    display: grid;
-    grid-template-rows: 250px 1fr;
-    animation-name: blink;
-    animation-timing-function: linear;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
+    display: flex;
+    align-items: center;
+    overflow: hidden;
+    justify-content: center;
+    animation: blink 2s linear infinite;
 }
 @keyframes blink {
     50% {
-        opacity: 0;
+        opacity: 0.3;
+    }
+}
+
+.waveBlock{
+    width: 10%;
+    box-shadow: 15px 0px 10px #ffffff, -15px 0px 10px #ffffff;
+    height: 100%;
+    background-color: #ffffff;
+    opacity: 0.85;
+    animation: wave 6s linear infinite;
+}
+@keyframes wave {
+    0% {
+        transform: translateX(0%);
+    }
+
+    50% {
+        transform: translateX(855%);
+    }
+
+    100% {
+        transform: translateX(0%);
     }
 }
