--- a/src/components/ProductPage/ImageBlock/ProductImgCarousel/ProductImgCarousel.module.css
+++ b/src/components/ProductPage/ImageBlock/ProductImgCarousel/ProductImgCarousel.module.css
@@ -1,3 +1,4 @@
+/*main styles of carousel img block*/
 .singleCarouselImg{
     width: 80px;
     height: 80px;
@@ -8,4 +9,9 @@
     align-items: center;
     justify-content: center;
 }
-.img{height: 80px;padding: 5px;}
+/*main styles of small carousel img*/
+.img{height: 80px; width: 80px ;padding: 5px;}
+/*active img block*/
+.activeCarouselImg{
+    border: 2px solid #003767;
+}
