--- a/src/components/UIUX/buttons/MyRegularSmallBtn/MyRegularSmallBtn.module.css
+++ b/src/components/UIUX/buttons/MyRegularSmallBtn/MyRegularSmallBtn.module.css
@@ -7,4 +7,10 @@
     font-size: 14px;
     line-height: 150%;
     color: #003767;
+    cursor: pointer;
+}
+
+.myRegularSmallBtnDisable{
+    background-color: #dfe1e6;
+    cursor: auto;
 }
