--- a/src/components/ProductPage/ProductInfoBlock/CompareButtonsBlock/CompareButton/CompareButton.module.css
+++ b/src/components/ProductPage/ProductInfoBlock/CompareButtonsBlock/CompareButton/CompareButton.module.css
@@ -12,3 +12,11 @@
     display: flex;
     justify-content: space-between;
 }
+
+.myclass{
+    color: red;
+}
+.myclass path {
+    fill: #ff4822;
+    background-color: #ff4822;
+}
