--- a/src/components/ProductPage/ImageBlock/ProductImgCarousel/ProductImgCarousel.module.css
+++ b/src/components/ProductPage/ImageBlock/ProductImgCarousel/ProductImgCarousel.module.css
@@ -8,10 +8,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 /*main styles of small carousel img*/
 .img{height: 80px; width: 80px ;padding: 5px;}
 /*active img block*/
 .activeCarouselImg{
     border: 2px solid #003767;
+    cursor: pointer;
 }
