attributes present page

--- a/src/components/ProductPage/ProductPage.module.css
+++ b/src/components/ProductPage/ProductPage.module.css
@@ -46,6 +46,7 @@
     overflow: hidden;
 }
 .readMore{
+    margin-top: 15px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
