--- a/src/components/ProductPage/ProductTabs/TabsButtons/TubsButtoons.module.css
+++ b/src/components/ProductPage/ProductTabs/TabsButtons/TubsButtoons.module.css
@@ -1,5 +1,7 @@
-.titleBlock{
+.tabsButtonsLayout{
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: flex-start;
+    gap: 30px;
 }
