--- a/src/components/ProductPage/ProductAttributes/AttributeCart/AttributeCart.module.css
+++ b/src/components/ProductPage/ProductAttributes/AttributeCart/AttributeCart.module.css
@@ -5,4 +5,22 @@
     background-color: #ffffff;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
     border-radius: 2px;
+    display: flex;
+    flex-direction: column;
+    /*justify-content: space-between;*/
+}
+.attributeString{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 10px;
+}
+.attributeString:first-child{
+    margin-top: 0;
+}
+.attributeText{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #003767;
 }
