--- a/src/components/UIUX/buttons/product_page/AddToCart/AddToCart.module.css
+++ b/src/components/UIUX/buttons/product_page/AddToCart/AddToCart.module.css
@@ -1,4 +1,4 @@
-.addToCartButton{
+.addToCartButtonPage{
     padding: 8px 16px;
     background-color: #ffffff;
     border: 1px solid #003767;
@@ -7,4 +7,17 @@
     font-size: 14px;
     line-height: 19px;
     color: #003767;
+    cursor: pointer;
+}
+
+.addToCartButtonCatalog{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 19px;
+    color: #ffffff;
+    padding: 8px 16px;
+    border-radius: 2px;
+    opacity: 0.9;
+    background-color: #003767;
+    cursor: pointer;
 }
