--- a/src/components/CatalogAside/CatalogFalseAside/CatalogFalseAside.module.css
+++ b/src/components/CatalogAside/CatalogFalseAside/CatalogFalseAside.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     justify-content: space-between;
     margin-top: 16px;
+    min-width: 280px;
 }
 .link,
 .active_link{
