--- a/src/components/regular_components/ProductCart/CartItems/TotalPriceBlock/TotalPriceBlock.module.css
+++ b/src/components/regular_components/ProductCart/CartItems/TotalPriceBlock/TotalPriceBlock.module.css
@@ -1,11 +1,11 @@
 .totalPriceBlock{
-    margin-top: 50px;
+    margin-top: 16px;
     width: 100%;
     height: 50px;
     background: #FFFFFF;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.06);
     border-radius: 2px;
-    padding: 8px 16px;
+    padding: 8px 25px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -14,7 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 35px;
+    gap: 50px;
 }
 .totalPrice{
     font-weight: 700;
@@ -22,4 +22,11 @@
     line-height: 150%;
     letter-spacing: 0.02em;
     color: #000000;
+}
+.totalText{
+    color: #003767;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 150%;
+    letter-spacing: 0.02em;
 }
