--- a/src/components/UIUX/NEW_UI/MyBlocks/MyPagination/MyPagination.module.css
+++ b/src/components/UIUX/NEW_UI/MyBlocks/MyPagination/MyPagination.module.css
@@ -1,13 +1,13 @@
-.paginationMainStyles{
+.paginationBlock{
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 100%;
     grid-column: 2;
 }
-.activePage{
+.activePaginationPage{
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 500;
     line-height: 150%;
     display: flex;
     align-items: center;
@@ -15,8 +15,15 @@
     padding: 4px 10px;
     background-color: #ff4822;
     border-radius: 2px;
+    cursor: pointer;
 }
-.singlePage{
+.singlePaginationPage{
     color: #003767;
     font-size: 16px;
+    font-weight: 500;
+    line-height: 150%;
+    cursor: pointer;
+}
+.arrowStyle{
+    cursor: pointer;
 }
