--- a/src/components/ProductPage/ProductPage.module.css
+++ b/src/components/ProductPage/ProductPage.module.css
@@ -7,7 +7,9 @@
     grid-column-gap: 50px;
     padding: 30px;
 }
-
+.breadCrumbs{
+    margin-bottom: 16px;
+}
 .description{
     font-weight: 400;
     font-size: 16px;
