--- a/src/components/UIUX/NEW_UI/MyActionButtons/MyCompare/MyCompare.module.css
+++ b/src/components/UIUX/NEW_UI/MyActionButtons/MyCompare/MyCompare.module.css
@@ -1,8 +1,7 @@
-.myCompare{
- cursor: pointer;
-}
 .compareBlock{
  display: flex;
+ align-items: center;
  flex-direction: row;
  gap: 10px;
+ cursor: pointer;
 }
