--- a/src/components/UIUX/NEW_UI/MyActionButtons/MyWishlist/MyWishlist.module.css
+++ b/src/components/UIUX/NEW_UI/MyActionButtons/MyWishlist/MyWishlist.module.css
@@ -1,8 +1,7 @@
-.wishlistBtn{
-    cursor: pointer;
-}
 .wishlistBlock{
     display: flex;
+    align-items: center;
     flex-direction: row;
     gap: 10px;
+    cursor: pointer;
 }
