--- a/src/components/ProductCatalog/CatalogTopMenu/CatalogTopMenuSorting/CatalogTopMenuSorting.module.css
+++ b/src/components/ProductCatalog/CatalogTopMenu/CatalogTopMenuSorting/CatalogTopMenuSorting.module.css
@@ -15,6 +15,7 @@
 .catalogLayoutButtons{
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     gap: 5px;
 }
 /*BreadCrumbs*/
