--- a/src/components/UIUX/NEW_UI/MyBlocks/MyPagination/MyPagination.module.css
+++ b/src/components/UIUX/NEW_UI/MyBlocks/MyPagination/MyPagination.module.css
@@ -2,8 +2,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 100%;
-    grid-column: 2;
+    gap: 15px;
+    margin-top: 16px;
 }
 .activePaginationPage{
     font-size: 16px;
@@ -16,6 +16,7 @@
     background-color: #ff4822;
     border-radius: 2px;
     cursor: pointer;
+    align-self: center;
 }
 .singlePaginationPage{
     color: #003767;
@@ -23,7 +24,10 @@
     font-weight: 500;
     line-height: 150%;
     cursor: pointer;
+    align-self: center;
 }
 .arrowStyle{
     cursor: pointer;
+    display: flex;
+    align-self: center;
 }
