--- a/src/components/UIUX/NEW_UI/MyBlocks/HorizontalProductCart/HorizontalProductCard.module.css
+++ b/src/components/UIUX/NEW_UI/MyBlocks/HorizontalProductCart/HorizontalProductCard.module.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: flex-start;
     width: 100%;
+    height: 269px;
     gap: 20px;
     background-color: #ffffff;
     margin-top: 16px;
