--- a/src/components/UIUX/NEW_UI/MyBlocks/CartProductCard/ProductCartItemPrice/ProductCartItemPrice.module.css
+++ b/src/components/UIUX/NEW_UI/MyBlocks/CartProductCard/ProductCartItemPrice/ProductCartItemPrice.module.css
@@ -1,5 +1,6 @@
 .productPriceBlock{
     height: 100%;
+    min-width: 110px;
     display: flex;
     align-items: center;
     justify-content: center;
