--- a/src/components/UIUX/NEW_UI/MyActionButtons/MyCompare/MyCompare.module.css
+++ b/src/components/UIUX/NEW_UI/MyActionButtons/MyCompare/MyCompare.module.css
@@ -1,7 +1,20 @@
-.compareBlock{
+.wishlistBlock{
  display: flex;
  align-items: center;
  flex-direction: row;
  gap: 10px;
  cursor: pointer;
+}
+.wishlistBlockPosition{position: relative}
+.actionButton{width: 25px; height: 25px;}
+.countSpan{
+ position: absolute;
+ bottom: -5px;
+ right: -5px;
+ border-radius: 50%;
+ width: 20px;
+ line-height: 20px;
+ background-color: #ff4822;
+ color: #ffffff;
+ text-align: center;
 }
