--- a/src/components/UIUX/NEW_UI/MyBlocks/MyEmptyComponent/MyEmptyComponent.module.css
+++ b/src/components/UIUX/NEW_UI/MyBlocks/MyEmptyComponent/MyEmptyComponent.module.css
@@ -1,10 +1,11 @@
-.emptyCart{
+.emptyPageBlock{
     width: 100%;
+    height: inherit;
     display: flex;
     align-items: center;
     justify-content: center;
 }
-.emptyCartBlock{
+.emptyPageBlockSection{
     background-color: #ffffff;
     width: 580px;
     height: 292px;
@@ -14,7 +15,7 @@
     flex-direction: column;
     align-items: center;
 }
-.emptyCartTitle{
+.emptyPageBlockSectionTitle{
     font-weight: 700;
     font-size: 24px;
     line-height: 150%;
@@ -22,7 +23,7 @@
     color: #003767;
     text-align: center;
 }
-.emptyCartText{
+.emptyPageBlockSectionText{
     margin-top: 15px;
     width: 350px;
     font-weight: 400;
@@ -31,7 +32,7 @@
     text-align: center;
     color: #003767;
 }
-.buttonBlock{
+.emptyPageButtonsBlock{
     display: flex;
     align-items: center;
     justify-content: space-between;
