--- a/src/components/ProductCatalog/CatalogTopMenu/CatalogTopMenuSorting/CatalogTopMenuSorting.module.css
+++ b/src/components/ProductCatalog/CatalogTopMenu/CatalogTopMenuSorting/CatalogTopMenuSorting.module.css
@@ -17,9 +17,15 @@
 .breadcrumbs{}
 /*sorting right block*/
 .sortingRightSection{
-    display: grid;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
+    color: #003767;
+    background-color: transparent;
+    display: flex;
     align-items: center;
     justify-content: flex-end;
+    gap: 10px;
 }
 /*query*/
 @media only screen and (max-width: 768px) {  .breadcrumbs{display: none}  }
